--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,11 +1,12 @@
 ---
 ---
 
-@article{carreira2021exploring,
+@article{carreira2021exploring,  
   title={Exploring Usable Security to Improve the Impact of Formal Verification: A Research Agenda},
   author={Carreira, Carolina and Ferreira, Jo{\~a}o F and Mendes, Alexandra and Christin, Nicolas},
   journal={First Workshop on Applicable Formal Methods (co-located with Formal Methods 2021).},
   year={2021},
+  abstract={As software becomes more complex and assumes an even greater role in our lives, formal verification is set to become the gold standard in securing software systems into the future, since it can guarantee the absence of errors and entire classes of attack. Recent advances in formal verification are being used to secure everything from unmanned drones to the internet. At the same time, the usable security research community has made huge progress in improving the usability of security products and end-users comprehension of security issues. However, there have been no human-centered studies focused on the impact of formal verification on the use and adoption of formally verified software products. We propose a research agenda to fill this gap and to contribute with the first collection of studies on people's mental models on formal verification and associated security and privacy guarantees and threats. The proposed research has the potential to increase the adoption of more secure products and it can be directly used by the security and formal methods communities to create more effective and secure software tools.},
   selected={true}
 }
 
@@ -18,6 +19,7 @@
 }
 
  @misc{carreira_2021, 
+  abbr = {Masters Thesis},
   title={On Usable Security and Verified Password Managers}, 
   author={Carreira, Carolina}, 
   year={2021}
