--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,6 +15,18 @@
   author={Carreira, Carolina and Ferreira, Jo{\~a}o F and Mendes, Alexandra},
   journal={INFORUM},
   year={2021},
+  abstract={Security experts strongly recommend the use of Password
+    Managers (PMs). However, PMs are not widely used and studies indi-
+    cate usability problems and distrust from users as the reasons for their
+    low adoption. In this paper, we review usability challenges of PMs and
+    we propose the use of known usability best practices and techniques to
+    extend and improve Bitwarden, a widely-popular open-source PM. Since
+    this work is done in the context of the PassCert project, which aims
+    to build a formally verified PM, we also investigate ways to effectively
+    convey to users the formally verified properties. We report on prelim-
+    inary results and we propose a methodology to evaluate our extension
+    of Bitwarden and to determine the impact of formal verification on the
+    adoption of PMs.},
   selected={true}
 }
 
@@ -22,5 +34,9 @@
   abbr = {Masters Thesis},
   title={On Usable Security and Verified Password Managers}, 
   author={Carreira, Carolina}, 
+  abstract={Password Managers (PMs) are useful tools to manage passwords but they are not widely used. Studies indicate usability problems and distrust from users as the reasons for the low adoption of PMs.
+As such, we propose extending an existing PM by implementing relevant usability best practices and increasing transparency by educating users about how PMs work.
+This project is part of the PassCert research project, which aims to build a formally verified PM. Therefore, another goal is to explore ways that effectively convey to users the formally verified properties.
+We performed user studies that suggest that our solution improves the usability of the PM and that we were able to convey relevant information about its formally verified features. We contribute with the first study on users' perceptions of formal verification on PMs and hope that our findings can help the formal verification security community  better communicate with end-users. },
   year={2021}
 } 
