--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,7 @@
 ---
 
 @article{carreira2021exploring,  
+  abbr = {appFM'21},
   title={Exploring Usable Security to Improve the Impact of Formal Verification: A Research Agenda},
   author={Carreira, Carolina and Ferreira, Jo{\~a}o F and Mendes, Alexandra and Christin, Nicolas},
   journal={First Workshop on Applicable Formal Methods (co-located with Formal Methods 2021).},
@@ -11,6 +12,7 @@
 }
 
 @article{carreira2021towards,
+  abbr = {INFORUM'21},  
   title={Towards Improving the Usability of Password Managers},
   author={Carreira, Carolina and Ferreira, Jo{\~a}o F and Mendes, Alexandra},
   journal={INFORUM},
@@ -35,7 +37,7 @@
   title={Presentation of the Poster for the paper "Towards Improving the Usability of Password Managers"}, 
   author={Carreira, Carolina}, 
   year={2021},
-  url={https://www.canva.com/design/DAEpEGDXDYc/oMCDJxbUqh_NJ4u05039kQ/view?utm_content=DAEpEGDXDYc&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton}
+  pdf={https://www.canva.com/design/DAEpEGDXDYc/oMCDJxbUqh_NJ4u05039kQ/view?utm_content=DAEpEGDXDYc&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton}
 } 
 
  @misc{carreira_2021, 
