--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,14 @@
 ---
 ---
+@article{carreira2022studying,  
+  abbr = {appFM'21},
+  title={Studying Users' Willingness to Use a Formally Verified Password Manager},
+  author={Carreira, Carolina},
+  journal={PhD Symposium at the 17th International Conference on integrated Formal Methods (iFM)},
+  year={2022},
+  selected={true}
+}
+
 
 @article{carreira2021exploring,  
   abbr = {appFM'21},
