--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 ---
 ---
 @article{carreira2022studying,  
-  abbr = {appFM'21},
+  abbr = {PhD-iFM'22},
   title={Studying Users' Willingness to Use a Formally Verified Password Manager},
   author={Carreira, Carolina},
   journal={PhD Symposium at the 17th International Conference on integrated Formal Methods (iFM)},
