--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -41,12 +41,31 @@
   selected={true}
 }
 
- @misc{carreira_2021, 
+ @misc{p_carreira_2022_2, 
+  abbr = {Scientific Poster},
+  title={Presentation of the Poster for the paper "Towards Improving the Usability of Password Managers"}, 
+  author={Carreira, Carolina}, 
+  year={2022},
+  journal={IST PhD Open Days},
+  pdf={/assets/pdf/3_opendays.pdf}
+} 
+
+ @misc{p_carreira_2022_1, 
+  abbr = {Scientific Poster},
+  title={Presentation of the Poster}, 
+  author={Carreira, Carolina}, 
+  year={2022},
+  journal={CMU Portugal 2021 Summit - New frontiers in Tech},
+  pdf={/assets/pdf/2_Summit.pdf}
+} 
+
+ @misc{p_carreira_2021, 
   abbr = {Scientific Poster},
   title={Presentation of the Poster for the paper "Towards Improving the Usability of Password Managers"}, 
   author={Carreira, Carolina}, 
   year={2021},
-  pdf={https://www.canva.com/design/DAEpEGDXDYc/oMCDJxbUqh_NJ4u05039kQ/view?utm_content=DAEpEGDXDYc&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton}
+  journal={INForum},
+  pdf={/assets/pdf/1_Towards.pdf}
 } 
 
  @misc{carreira_2021, 
