--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -43,7 +43,7 @@
 
  @misc{p_carreira_2022_2, 
   abbr = {Scientific Poster},
-  title={Presentation of the Poster for the paper "Towards Improving the Usability of Password Managers"}, 
+  title={Presentation a poster in IST PhD Open Days}, 
   author={Carreira, Carolina}, 
   year={2022},
   journal={IST PhD Open Days},
@@ -52,7 +52,7 @@
 
  @misc{p_carreira_2022_1, 
   abbr = {Scientific Poster},
-  title={Presentation of the Poster}, 
+  title={Presentation a poster in CMU Portugal 2021 Summit - New frontiers in Tech}, 
   author={Carreira, Carolina}, 
   year={2022},
   journal={CMU Portugal 2021 Summit - New frontiers in Tech},
