--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -47,7 +47,7 @@
   author={Carreira, Carolina}, 
   year={2022},
   journal={IST PhD Open Days},
-  pdf={/assets/pdf/3_opendays.pdf}
+  pdf={3_opendays.pdf}
 } 
 
  @misc{p_carreira_2022_1, 
@@ -56,7 +56,7 @@
   author={Carreira, Carolina}, 
   year={2022},
   journal={CMU Portugal 2021 Summit - New frontiers in Tech},
-  pdf={/assets/pdf/2_Summit.pdf}
+  pdf={2_Summit.pdf}
 } 
 
  @misc{p_carreira_2021, 
@@ -65,7 +65,7 @@
   author={Carreira, Carolina}, 
   year={2021},
   journal={INForum},
-  pdf={/assets/pdf/1_Towards.pdf}
+  pdf={1_Towards.pdf}
 } 
 
  @misc{carreira_2021, 
