--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -33,7 +33,7 @@
   selected={true}
 }
 
- @misc{p_carreira_2022_2, 
+ @misc{carreira_2022_2, 
   abbr = {Scientific Poster},
   title={Presentation a poster in IST PhD Open Days}, 
   author={Carreira, Carolina}, 
@@ -42,7 +42,7 @@
   pdf={3_opendays.pdf}
 } 
 
- @misc{p_carreira_2022_1, 
+ @misc{carreira_2022_1, 
   abbr = {Scientific Poster},
   title={Presentation a poster in CMU Portugal 2021 Summit - New frontiers in Tech}, 
   author={Carreira, Carolina}, 
@@ -51,7 +51,7 @@
   pdf={2_Summit.pdf}
 } 
 
- @misc{p_carreira_2021, 
+ @misc{carreira_2021_0, 
   abbr = {Scientific Poster},
   title={Presentation of the Poster for the paper "Towards Improving the Usability of Password Managers"}, 
   author={Carreira, Carolina}, 
