--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -37,27 +37,27 @@
   abbr = {Scientific Poster},
   title={Presentation a poster in IST PhD Open Days}, 
   author={Carreira, Carolina}, 
-  year={2022},
   journal={IST PhD Open Days},
-  pdf={3_opendays.pdf}
+  pdf={3_opendays.pdf},
+  year={2022}
 } 
 
  @misc{carreira_2022_1, 
   abbr = {Scientific Poster},
   title={Presentation a poster in CMU Portugal 2021 Summit - New frontiers in Tech}, 
   author={Carreira, Carolina}, 
-  year={2022},
   journal={CMU Portugal 2021 Summit - New frontiers in Tech},
-  pdf={2_Summit.pdf}
+  pdf={2_Summit.pdf},
+  year={2021}
 } 
 
  @misc{carreira_2021_0, 
   abbr = {Scientific Poster},
   title={Presentation of the Poster for the paper "Towards Improving the Usability of Password Managers"}, 
   author={Carreira, Carolina}, 
-  year={2021},
   journal={INForum},
-  pdf={1_Towards.pdf}
+  pdf={1_Towards.pdf},
+  year={2021}
 } 
 
  @misc{carreira_2021, 
