--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -23,6 +23,27 @@
   selected={true}
 }
 
+@inproceedings{severes2023human,
+  title={The Human Side of XAI: Bridging the Gap between AI and Non-expert Audiences},
+  author={Severes, Beatriz and Carreira, Carolina and Vieira, Ana Beatriz and Gomes, Eduardo and Apar{\'\i}cio, Jo{\~a}o Tiago and Pereira, In{\^e}s},
+  journal={Proceedings of the 41st ACM International Conference on Design of Communication},
+  pages={126--132},
+  year={2023},
+  abstract={Machine Learning is widely used by practitioners to solve complex challenges. However, despite being trusted by 76% of the public, scientists struggle to explain the rationale behind machine learning-based decisions. This is concerning because research has shown that people often rely on inaccurate machine learning recommendations, even when the system is not confident or they have prior knowledge. To address these issues, there is a crucial need for greater transparency and education around machine learning decision making. In this work, we propose a set of guidelines and design implications to communicate eXplainable Artificial Intelligence models to the general audience. We do this through a literature review of the latest and eXplainable Artificial Intelligence methods and validate these insights through a user study encompassing the participants’ interpretations of the eXplainable Artificial Intelligence solutions. Combining the insights from this mixed-method study, we identify seven main communication guidelines for improving machine learning models understanding. This study contributes to the broader discussion of ethical implications surrounding opaque machine learning models in decision-making. Through the development of guidelines, we hope to bridge the gap between machine learning experts and the public, enabling a better common understanding of its increasing importance in our lives.}
+  selected={true}
+}
+
+@article{lima2024diffuzzar,
+  title={DifFuzzAR: automatic repair of timing side-channel vulnerabilities via refactoring},
+  author={Lima, Rui and Ferreira, Jo{\~a}o F and Mendes, Alexandra and Carreira, Carolina},
+  journal={Automated Software Engineering},
+  year={2024},
+  abstract={Vulnerability detection and repair is a demanding and expensive part of the software development process. As such, there has been an effort to develop new and better ways to automatically detect and repair vulnerabilities. DifFuzz is a state-of-the-art tool for automatic detection of timing side-channel vulnerabilities, a type of vulnerability that is particularly difficult to detect and correct. Despite recent progress made with tools such as DifFuzz, work on tools capable of automatically repairing timing side-channel vulnerabilities is scarce. In this paper, we propose DifFuzzAR, a tool for automatic repair of timing side-channel vulnerabilities in Java code. The tool works in conjunction with DifFuzz and it is able to repair 56% of the vulnerabilities identified in DifFuzz’s dataset. The results show that the tool can automatically correct timing side-channel vulnerabilities, being more effective with those that are control-flow based. In addition, the results of a user study show that users generally trust the refactorings produced by DifFuzzAR and that they see value in such a tool, in particular for more critical code.},
+  publisher={Springer}
+}
+
+
+
 @article{carreira2021towards,
   abbr = {INFORUM'21},  
   title={Towards Improving the Usability of Password Managers},
