--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -76,7 +76,7 @@
 
 @article{carreira_2022_2, 
   abbr = {Scientific Poster},
-  title={Presentation a poster in IST PhD Open Days}, 
+  title={Presentation of the poster in IST PhD Open Days}, 
   author={Carreira, Carolina}, 
   journal={IST PhD Open Days},
   pdf={3_opendays.pdf},
@@ -85,7 +85,7 @@
 
 @article{carreira_2022_1, 
   abbr = {Scientific Poster},
-  title={Presentation a poster in CMU Portugal 2021 Summit - New frontiers in Tech}, 
+  title={Presentation of the poster in CMU Portugal 2021 Summit - New frontiers in Tech}, 
   author={Carreira, Carolina}, 
   journal={CMU Portugal 2021 Summit - New frontiers in Tech},
   pdf={2_Summit.pdf},
