--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -29,7 +29,7 @@
   journal={Proceedings of the 41st ACM International Conference on Design of Communication},
   pages={126--132},
   year={2023},
-  abstract={Machine Learning is widely used by practitioners to solve complex challenges. However, despite being trusted by 76% of the public, scientists struggle to explain the rationale behind machine learning-based decisions. This is concerning because research has shown that people often rely on inaccurate machine learning recommendations, even when the system is not confident or they have prior knowledge. To address these issues, there is a crucial need for greater transparency and education around machine learning decision making. In this work, we propose a set of guidelines and design implications to communicate eXplainable Artificial Intelligence models to the general audience. We do this through a literature review of the latest and eXplainable Artificial Intelligence methods and validate these insights through a user study encompassing the participants’ interpretations of the eXplainable Artificial Intelligence solutions. Combining the insights from this mixed-method study, we identify seven main communication guidelines for improving machine learning models understanding. This study contributes to the broader discussion of ethical implications surrounding opaque machine learning models in decision-making. Through the development of guidelines, we hope to bridge the gap between machine learning experts and the public, enabling a better common understanding of its increasing importance in our lives.}
+  abstract={Machine Learning is widely used by practitioners to solve complex challenges. However, despite being trusted by 76\% of the public, scientists struggle to explain the rationale behind machine learning-based decisions. This is concerning because research has shown that people often rely on inaccurate machine learning recommendations, even when the system is not confident or they have prior knowledge. To address these issues, there is a crucial need for greater transparency and education around machine learning decision making. In this work, we propose a set of guidelines and design implications to communicate eXplainable Artificial Intelligence models to the general audience. We do this through a literature review of the latest and eXplainable Artificial Intelligence methods and validate these insights through a user study encompassing the participants’ interpretations of the eXplainable Artificial Intelligence solutions. Combining the insights from this mixed-method study, we identify seven main communication guidelines for improving machine learning models understanding. This study contributes to the broader discussion of ethical implications surrounding opaque machine learning models in decision-making. Through the development of guidelines, we hope to bridge the gap between machine learning experts and the public, enabling a better common understanding of its increasing importance in our lives.}
   selected={true}
 }
 
