--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -19,7 +19,7 @@ abbr = {Paper},
   author={Severes, Beatriz and Carreira, Carolina and Vieira, Ana Beatriz and Gomes, Eduardo and Aparicio, Joao Tiago and Pereira, Ines},
   journal={Proceedings of the 41st ACM International Conference on Design of Communication},
    abstract={Machine Learning is widely used by practitioners to solve complex challenges However despite being trusted by 76 of the public scientists struggle to explain the rationale behind machine learningbased decisions This is concerning because research has shown that people often rely on inaccurate machine learning recommendations even when the system is not confident or they have prior knowledge To address these issues there is a crucial need for greater transparency and education around machine learning decision making In this work we propose a set of guidelines and design implications to communicate eXplainable Artificial Intelligence models to the general audience We do this through a literature review of the latest and eXplainable Artificial Intelligence methods and validate these insights through a user study encompassing the participants interpretations of the eXplainable Artificial Intelligence solutions Combining the insights from this mixedmethod study we identify seven main communication guidelines for improving machine learning models understanding This study contributes to the broader discussion of ethical implications surrounding opaque machine learning models in decisionmaking Through the development of guidelines we hope to bridge the gap between machine learning experts and the public enabling a better common understanding of its increasing importance in our lives},
-  year={2023}
+  year={2023}, elected={true}
 }
 
 @article{lima2024diffuzzar,
@@ -28,7 +28,8 @@ abbr = {Paper},
   author={Lima, Rui and Ferreira, Joao F and Mendes, Alexandra and Carreira, Carolina},
   journal={Automated Software Engineering},
   year={2024},   
-  abstract={Vulnerability detection and repair is a demanding and expensive part of the software development process As such there has been an effort to develop new and better ways to automatically detect and repair vulnerabilities DifFuzz is a stateoftheart tool for automatic detection of timing sidechannel vulnerabilities a type of vulnerability that is particularly difficult to detect and correct Despite recent progress made with tools such as DifFuzz work on tools capable of automatically repairing timing sidechannel vulnerabilities is scarce In this paper we propose DifFuzzAR a tool for automatic repair of timing sidechannel vulnerabilities in Java code The tool works in conjunction with DifFuzz and it is able to repair 56 of the vulnerabilities identified in DifFuzzs dataset The results show that the tool can automatically correct timing sidechannel vulnerabilities being more effective with those that are controlflow based In addition the results of a user study show that users generally trust the refactorings produced by DifFuzzAR and that they see value in such a tool in particular for more critical code}
+  abstract={Vulnerability detection and repair is a demanding and expensive part of the software development process As such there has been an effort to develop new and better ways to automatically detect and repair vulnerabilities DifFuzz is a stateoftheart tool for automatic detection of timing sidechannel vulnerabilities a type of vulnerability that is particularly difficult to detect and correct Despite recent progress made with tools such as DifFuzz work on tools capable of automatically repairing timing sidechannel vulnerabilities is scarce In this paper we propose DifFuzzAR a tool for automatic repair of timing sidechannel vulnerabilities in Java code The tool works in conjunction with DifFuzz and it is able to repair 56 of the vulnerabilities identified in DifFuzzs dataset The results show that the tool can automatically correct timing sidechannel vulnerabilities being more effective with those that are controlflow based In addition the results of a user study show that users generally trust the refactorings produced by DifFuzzAR and that they see value in such a tool in particular for more critical code},
+  elected={true}
 }
 @article{carreira2021exploring,  
   abbr = {appFM'21},
