--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -100,3 +100,36 @@ abbr = {Paper},
   year={2022},
   selected={true}
 }
+
+
+
+@article{carreira2021towards,
+  abbr = {INFORUM'21},  
+  title={Towards Improving the Usability of Password Managers},
+  author={Carreira, Carolina and Ferreira, Jo{\~a}o F and Mendes, Alexandra},
+  journal={INFORUM},
+  year={2021},
+  abstract={Security experts strongly recommend the use of Password
+    Managers (PMs). However, PMs are not widely used and studies indi-
+    cate usability problems and distrust from users as the reasons for their
+    low adoption. In this paper, we review usability challenges of PMs and
+    we propose the use of known usability best practices and techniques to
+    extend and improve Bitwarden, a widely-popular open-source PM. Since
+    this work is done in the context of the PassCert project, which aims
+    to build a formally verified PM, we also investigate ways to effectively
+    convey to users the formally verified properties. We report on prelim-
+    inary results and we propose a methodology to evaluate our extension
+    of Bitwarden and to determine the impact of formal verification on the
+    adoption of PMs.},
+  selected={true}
+}
+
+
+@article{lima2024diffuzzar,
+abbr = {Automated Software Engineering},
+  title={DifFuzzAR: automatic repair of timing side-channel vulnerabilities via refactoring},
+  author={Lima, Rui and Ferreira, Jo{\~a}o F and Mendes, Alexandra and Carreira, Carolina},
+  journal={Automated Software Engineering},
+  year={2024},
+  publisher={Springer}, selected={true}
+}
