--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -31,6 +31,22 @@ abbr = {Paper},
   abstract={Vulnerability detection and repair is a demanding and expensive part of the software development process As such there has been an effort to develop new and better ways to automatically detect and repair vulnerabilities DifFuzz is a stateoftheart tool for automatic detection of timing sidechannel vulnerabilities a type of vulnerability that is particularly difficult to detect and correct Despite recent progress made with tools such as DifFuzz work on tools capable of automatically repairing timing sidechannel vulnerabilities is scarce In this paper we propose DifFuzzAR a tool for automatic repair of timing sidechannel vulnerabilities in Java code The tool works in conjunction with DifFuzz and it is able to repair 56 of the vulnerabilities identified in DifFuzzs dataset The results show that the tool can automatically correct timing sidechannel vulnerabilities being more effective with those that are controlflow based In addition the results of a user study show that users generally trust the refactorings produced by DifFuzzAR and that they see value in such a tool in particular for more critical code},
   elected={true}
 }
+
+@article{carreira2025systematic,
+  title={A Systematic Review of Security Communication Strategies: Guidelines and Open Challenges},
+  author={Carreira, Carolina and Mendes, Alexandra and Ferreira, Jo{\~a}o F and Christin, Nicolas},
+  journal={arXiv preprint arXiv:2504.02109},
+  year={2025},
+  selected={true}
+}
+
+@article{carreira2025worse,
+  title={The Ultimate Configuration Management Tool? Lessons from a Mixed Methods Study of Ansible's Challenges},
+  author={Carreira, Carolina and Saavedra, Nuno and Mendes, Alexandra and Ferreira, Jo{\~a}o F},
+  journal={arXiv preprint arXiv:2504.08678},
+  year={2025}
+}
+
 @article{carreira2021exploring,  
   abbr = {appFM'21},
   title={Exploring Usable Security to Improve the Impact of Formal Verification: A Research Agenda},
