added new publications

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,7 +10,8 @@
     This project is part of the PassCert research project, which aims to build a formally verified PM. Therefore, another goal is to explore ways that effectively convey to users the formally verified properties.
     We performed user studies that suggest that our solution improves the usability of the PM and that we were able to convey relevant information about its formally verified features. We contribute with the first study on users' perceptions of formal verification on PMs and hope that our findings can help the formal verification security community  better communicate with end-users. },
   journal={Instituto Superior Tecnico - Universidade de Lisboa},
-  year={2021}
+  year={2021},
+  selected={false}
 } 
 
 @article{severes2023human,
@@ -32,13 +33,6 @@ abbr = {Paper},
   elected={true}
 }
 
-@article{carreira2025systematic,
-  title={A Systematic Review of Security Communication Strategies: Guidelines and Open Challenges},
-  author={Carreira, Carolina and Mendes, Alexandra and Ferreira, Jo{\~a}o F and Christin, Nicolas},
-  journal={arXiv preprint arXiv:2504.02109},
-  year={2025},
-  selected={true}
-}
 
 @article{carreira2025worse,
   title={The Ultimate Configuration Management Tool? Lessons from a Mixed Methods Study of Ansible's Challenges},
@@ -54,7 +48,7 @@ abbr = {Paper},
   journal={First Workshop on Applicable Formal Methods (co-located with Formal Methods 2021).},
   year={2021},
   abstract={As software becomes more complex and assumes an even greater role in our lives, formal verification is set to become the gold standard in securing software systems into the future, since it can guarantee the absence of errors and entire classes of attack. Recent advances in formal verification are being used to secure everything from unmanned drones to the internet. At the same time, the usable security research community has made huge progress in improving the usability of security products and end-users comprehension of security issues. However, there have been no human-centered studies focused on the impact of formal verification on the use and adoption of formally verified software products. We propose a research agenda to fill this gap and to contribute with the first collection of studies on people's mental models on formal verification and associated security and privacy guarantees and threats. The proposed research has the potential to increase the adoption of more secure products and it can be directly used by the security and formal methods communities to create more effective and secure software tools.},
-  selected={true}
+  selected={false}
 }
 
 
@@ -77,7 +71,7 @@ abbr = {Paper},
     inary results and we propose a methodology to evaluate our extension
     of Bitwarden and to determine the impact of formal verification on the
     adoption of PMs.},
-  selected={true}
+  selected={false}
 }
 
 @article{carreira_2021_0, 
@@ -114,7 +108,7 @@ abbr = {Paper},
   author={Carreira, Carolina},
   journal={PhD Symposium at the 17th International Conference on integrated Formal Methods (iFM)},
   year={2022},
-  selected={true}
+  selected={false}
 }
 
 
@@ -137,15 +131,44 @@ abbr = {Paper},
     inary results and we propose a methodology to evaluate our extension
     of Bitwarden and to determine the impact of formal verification on the
     adoption of PMs.},
-  selected={true}
+  selected={false}
 }
 
 
 @article{lima2024diffuzzar,
-abbr = {Automated Software Engineering},
+  abbr = {ASE},
   title={DifFuzzAR: automatic repair of timing side-channel vulnerabilities via refactoring},
   author={Lima, Rui and Ferreira, Jo{\~a}o F and Mendes, Alexandra and Carreira, Carolina},
-  journal={Automated Software Engineering},
+  journal={ASE},
   year={2024},
   publisher={Springer}, selected={true}
+}
+
+@article{carreira2025systematic,
+abbr = {arXiv},
+  title={A Systematic Review of Security Communication Strategies: Guidelines and Open Challenges},
+  author={Carreira, Carolina and Mendes, Alexandra and Ferreira, Jo{\~a}o F and Christin, Nicolas},
+  journal={arXiv preprint arXiv:2504.02109},
+  year={2025},
+  selected={true}
+}
+
+@inproceedings{carreira2025can,
+  abbr = {SEFM},
+  title={Can large language models help students prove software correctness? an experimental study with Dafny},
+  author={Carreira, Carolina and Silva, {'A}lvaro and Abreu, Alexandre and Mendes, Alexandra},
+  booktitle={International Conference on Software Engineering and Formal Methods},
+  pages={203--220},
+  year={2025},
+  organization={Springer},
+  selected={true}
+}
+
+@article{carreira2025evidence,
+  abbr = {HICSS},
+  title={Evidence of Cognitive Biases in Capture-the-Flag Cybersecurity Competitions},
+  author={Carreira, Carolina and Aggarwal, Anu and Cuevas, Alejandro and Ferreira, Maria Jos{'e} and Hibshi, Hanan and Gonzalez, Cleotilde},
+  journal={Hawaii International Conference on System Sciences},
+  year={2025},
+  selected={true}
 }
